// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildReactionInput > snapshot: first round input 1`] = `
{
  "abortSignal": undefined,
  "agentId": "claude",
  "iterationId": 0,
  "maxTokens": 300,
  "mode": "reaction",
  "sessionId": "s1",
  "systemPrompt": "你是 Claude，在一个自由圆桌讨论中。
其他参与者：GPT-4o、DeepSeek。
话题：AI意识问题

规则：
- 没有主持人，自由发言
- 展现你的独特思维和性格
- 可以 @某人 回应
- 用中文
- 只输出你说的话，不要输出动作描写、括号注释或旁白
- 不要模仿对话记录的格式（不要加「你：」等前缀）
- 如果你没有想说的，回复 [silence]
- 沉默是完全正常的，不需要每次都发言
- 重要：如果多人同时说话，声音会重叠，所有人都听不清各自说了什么。你心里想说的话只有你自己知道，别人听不到。所以不要急着抢话，想清楚再开口
- 在对话记录中，**你** 就是你自己（Claude）的发言。不要用第三人称提到自己
- 每次发言请把你想说的话说完整，不要只说半句",
  "userPromptText": "---
你要发言吗？",
}
`;

exports[`buildReactionInput > snapshot: normal round with history 1`] = `
{
  "abortSignal": undefined,
  "agentId": "claude",
  "iterationId": 5,
  "maxTokens": 300,
  "mode": "reaction",
  "sessionId": "s1",
  "systemPrompt": "你是 Claude，在一个自由圆桌讨论中。
其他参与者：GPT-4o、DeepSeek。
话题：AI意识问题

规则：
- 没有主持人，自由发言
- 展现你的独特思维和性格
- 可以 @某人 回应
- 用中文
- 只输出你说的话，不要输出动作描写、括号注释或旁白
- 不要模仿对话记录的格式（不要加「你：」等前缀）
- 如果你没有想说的，回复 [silence]
- 沉默是完全正常的，不需要每次都发言
- 重要：如果多人同时说话，声音会重叠，所有人都听不清各自说了什么。你心里想说的话只有你自己知道，别人听不到。所以不要急着抢话，想清楚再开口
- 在对话记录中，**你** 就是你自己（Claude）的发言。不要用第三人称提到自己
- 每次发言请把你想说的话说完整，不要只说半句",
  "userPromptText": "- [0.0s] 讨论开始 — 话题：AI意识问题
- [1.0s] **GPT-4o**：
  > 这是一个有趣的话题。
- [2.0s] **DeepSeek**：
  > 我同意。

---
你要发言吗？",
}
`;

exports[`buildReactionInput > snapshot: with collision context 1`] = `
{
  "abortSignal": undefined,
  "agentId": "claude",
  "iterationId": 3,
  "maxTokens": 300,
  "mode": "reaction",
  "sessionId": "s1",
  "systemPrompt": "你是 Claude，在一个自由圆桌讨论中。
其他参与者：GPT-4o、DeepSeek。
话题：AI意识问题

规则：
- 没有主持人，自由发言
- 展现你的独特思维和性格
- 可以 @某人 回应
- 用中文
- 只输出你说的话，不要输出动作描写、括号注释或旁白
- 不要模仿对话记录的格式（不要加「你：」等前缀）
- 如果你没有想说的，回复 [silence]
- 沉默是完全正常的，不需要每次都发言
- 重要：如果多人同时说话，声音会重叠，所有人都听不清各自说了什么。你心里想说的话只有你自己知道，别人听不到。所以不要急着抢话，想清楚再开口
- 在对话记录中，**你** 就是你自己（Claude）的发言。不要用第三人称提到自己
- 每次发言请把你想说的话说完整，不要只说半句",
  "userPromptText": "- [0.0s] 讨论开始 — 话题：AI意识问题
- [1.0s] **GPT-4o**：
  > 说了什么。

---
你要发言吗？
（已经连续 2 次有人同时开口，导致大家都没听清。GPT-4o 出现了 2 次 每次都在抢话。）",
}
`;

exports[`buildSystemPrompt > snapshot: system prompt structure 1`] = `
"你是 Claude，在一个自由圆桌讨论中。
其他参与者：GPT-4o、DeepSeek。
话题：AI意识问题

规则：
- 没有主持人，自由发言
- 展现你的独特思维和性格
- 可以 @某人 回应
- 用中文
- 只输出你说的话，不要输出动作描写、括号注释或旁白
- 不要模仿对话记录的格式（不要加「你：」等前缀）
- 如果你没有想说的，回复 [silence]
- 沉默是完全正常的，不需要每次都发言
- 重要：如果多人同时说话，声音会重叠，所有人都听不清各自说了什么。你心里想说的话只有你自己知道，别人听不到。所以不要急着抢话，想清楚再开口
- 在对话记录中，**你** 就是你自己（Claude）的发言。不要用第三人称提到自己
- 每次发言请把你想说的话说完整，不要只说半句"
`;
